--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["JPark <qkrwogus88@naver.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
 openai = "^1.3.7"
 flet = "^0.14.0"
 tiktoken = "^0.5.2"
@@ -15,6 +15,7 @@ docx2txt = "^0.8"
 faiss-cpu = "^1.7.4"
 python-dotenv = "^1.0.0"
 langchain = "^0.0.352"
+pyinstaller = "^6.3.0"
 
 
 [build-system]
